# SoundStream

./: .clang-format  .clang-tidy  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  setEnv.sh
.devcontainer/: devcontainer.json
assets/: org.kde.soundstream.desktop  org.kde.soundstream.metainfo.xml
cmake/: SoundStreamStaticAnalysis.cmake
docs/: feature-checklist.md
qml/: Main.qml
src/: CMakeLists.txt  SoundStream.cpp  SoundStream.h  main.cpp
src/adapters/qt/: CMakeLists.txt  QtGraphModelBridge.cpp  QtGraphModelBridge.h  QtMainThreadDispatcher.cpp  QtMainThreadDispatcher.h
src/backend/: CMakeLists.txt
src/backend/pipewire/: CMakeLists.txt  PwClient.cpp  PwClient.h  PwMetadata.cpp  PwMetadata.h
src/canvas/: CMakeLists.txt  GraphLayouter.cpp  GraphLayouter.h  Item.cpp  Item.h  LinkInitializer.cpp  LinkInitializer.h  LinkItem.cpp  LinkItem.h  LinkPathUpdater.cpp  LinkPathUpdater.h  NodeItem.cpp  NodeItem.h  NodeRemovalHelper.cpp  NodeRemovalHelper.h  PatchbayModel.cpp  PatchbayModel.h  PatchbayScene.cpp  PatchbayScene.h  PatchbayView.cpp  PatchbayView.h  PortItem.cpp  PortItem.h  SceneItemIndex.h
src/core/: CMakeLists.txt  GraphBackend.h  GraphService.cpp  GraphService.h  GraphTypes.h  IMainThreadDispatcher.h
tests/: CMakeLists.txt  README.md
tests/core/: CMakeLists.txt  GraphServiceCatch2Test.cpp  PwMetadataCatch2Test.cpp
tests/qt/: CMakeLists.txt  PatchbaySceneInteractionTest.cpp  QtMainThreadDispatcherTest.cpp
